@@ -11,6 +11,8 @@ update-manager (1:0.120) karmic; urgency=low
   * UpdateManager/UpdateManager.py:
     - use a gtk link button to point the user to further
       upgrade information
+  * DistUpgrade/DistUpgradeController.py:
+    - ensure ./imported/invoke-rc.d is executable (LP: #147742)
 
  --
 
